re #16 - Fixed navbar on firefox

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -212,6 +212,7 @@ blockquote p {
     border: 1px solid darken($navbar-default-bg, 12%);
     border-radius: 4px;
     overflow:hidden;
+    width: 100%;
 }
 
 
